# kiren

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: advanced.js  hello.js  hi-mert.js
include/kiren/: kiren.hpp
src/: event_loop.zig  main.cpp  main.zig
src/api/: process.zig
src/core/: js_interpreter.cpp  js_interpreter.hpp  repl.cpp  repl.hpp  runtime.cpp
src/io/: poller.zig
tests/: test_js_interpreter.cpp  test_main.cpp  test_runtime.cpp  test_variables.cpp
